[gd_scene load_steps=10 format=3 uid="uid://hs2mytyqoi4c"]

[ext_resource type="Script" path="res://Scripts/Classes/UI.gd" id="1_uapss"]
[ext_resource type="Texture2D" uid="uid://b3sgdtbkbvx1e" path="res://Textures/UIBottom.png" id="2_x330p"]
[ext_resource type="PackedScene" uid="uid://ba4afwkd8iv77" path="res://Scenes/GUI/ui_button_up.tscn" id="3_h72wp"]
[ext_resource type="Texture2D" uid="uid://dd0phtrd2nbgq" path="res://Textures/UIRightUp.png" id="4_a8s5j"]
[ext_resource type="PackedScene" uid="uid://cbv76juler6ym" path="res://Scenes/GUI/ui_button_down.tscn" id="5_07yxw"]
[ext_resource type="Texture2D" uid="uid://bbs0cwuwh53yx" path="res://Textures/UILeftUp.png" id="6_iyvft"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pddki"]
texture = ExtResource("2_x330p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iavoi"]
texture = ExtResource("4_a8s5j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yx10f"]
texture = ExtResource("6_iyvft")

[node name="RTS_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uapss")

[node name="BottomPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 688.0
offset_right = 1280.0
offset_bottom = 928.0
theme_override_styles/panel = SubResource("StyleBoxTexture_pddki")

[node name="ButtonLeft" parent="." instance=ExtResource("3_h72wp")]
layout_direction = 2
layout_mode = 2
offset_left = 7.0
offset_top = 696.0
offset_right = 127.0
offset_bottom = 713.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ButtonRight" parent="." instance=ExtResource("3_h72wp")]
layout_direction = 3
layout_mode = 2
offset_left = 7.0
offset_top = 696.0
offset_right = 127.0
offset_bottom = 713.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ActionMenu" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 732.0
offset_right = 592.0
offset_bottom = 832.0

[node name="ActionContainer" type="GridContainer" parent="ActionMenu"]
layout_mode = 2
theme_override_constants/h_separation = 64
columns = 3

[node name="MinimapPanel" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 1092.0
offset_top = -232.0
offset_right = 1280.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxTexture_iavoi")

[node name="ButtonMap" parent="." instance=ExtResource("5_07yxw")]
layout_mode = 2
offset_left = 1154.0
offset_top = 11.0
offset_right = 1274.0
offset_bottom = 28.0

[node name="SelectionPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = -232.0
offset_right = 188.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxTexture_yx10f")

[node name="ButtonSelection" parent="." instance=ExtResource("5_07yxw")]
layout_mode = 0
offset_left = 6.0
offset_top = 11.0
offset_right = 126.0
offset_bottom = 28.0

[node name="SelectionMenu" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = -120.0
offset_right = 181.0
offset_bottom = -7.0

[node name="SelectionContainer" type="VBoxContainer" parent="SelectionMenu"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 64
